# fortytwo-lang

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ast.rs  error.rs  future_thoughts.md  lexer.rs  main.rs  parser.rs  position_container.rs  position_reader.rs  runtime.rs  rustfmt.toml  token.rs
.github/workflows/: publish-docker.yml  release.yml  rust.yml
ast/: Cargo.toml
ast/src/: binary_expression.rs  binary_operation.rs  function.rs  function_call.rs  lib.rs  number.rs  variable.rs
docs/: future_thoughts.md  installation.md
examples/: exit_code_arithmetic.ftl
lexer/: Cargo.toml
lexer/src/: error.rs  lib.rs  position_container.rs  position_reader.rs  token.rs
main/: Cargo.toml
main/src/: main.rs
parser/: Cargo.toml
parser/src/: error.rs  lib.rs
src/: ast.rs  cli.rs  emitter_c.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  position.rs  position_container.rs  position_reader.rs  runtime.rs  token.rs
src/ast/: function_argument.rs  function_definition.rs  function_prototype.rs  if_else.rs  mod.rs  struct_.rs  visitor.rs  while_loop.rs
src/ast/expression/: binary_expression.rs  binary_operator.rs  function_call.rs  mod.rs
src/ast/statement/: basic_data_type.rs  data_type.rs  mod.rs  var_assignment.rs
src/emitter/: mod.rs
src/emitter/c/: mod.rs
src/emitter/ftl/: mod.rs
src/lexer/: error.rs  mod.rs  test.rs
src/parser/: block.rs  error.rs  expression.rs  function.rs  helper.rs  instruction.rs  mod.rs  struct_.rs  variable.rs
src/semantic_analyzer/: error.rs  expression_type_inference.rs  mod.rs  pass.rs  symbol_table.rs  type_check.rs  variable.rs
src/source/: mod.rs  position.rs  position_container.rs  position_range.rs  source_position.rs
src/tests/: common.rs  mod.rs  test_parser.rs
