[package]
name = "fortytwolang"
version = "0.1.0"
edition = "2021"
authors = ["linuskmr <linuskmr.dev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "3.2.22", features = ["derive"] }
thiserror = "1.0.35"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-tree = "0.2.4"
try_match = "0.3.0"
