[package]
name = "parser"
version = "0.1.0"
authors = ["Linus Kämmerer <l.kaemmerer@tu-braunschweig.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
ast = { path = "../ast" }
phf = { version = "0.7.24", features = ["macros"] }